added tests for identity module

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -82,7 +82,8 @@ BIN_ERROR_DIR = $(BIN_DIR)/errors
 
 TESTS = test_led \
 		test_volt \
-		test_bal 
+		test_bal \
+		test_identity 
 
 test_all: $(TESTS)
 
